@@ -1,12 +1,15 @@
 SUBDIRS = .
 
 nobase_pkginclude_HEADERS = Exceptions.hh         \
+                            FrequencyBand.fh      \
                             FrequencyBand.hh      \
                             MomentumHelpers.hh    \
                             NewWave.hh            \
                             PixelArray.hh         \
                             PixelDefinition.hh    \
                             Utils.hh              \
+                            WaveletBaseEvent.hh   \
+                            WaveletCoefficient.fh \
                             WaveletCoefficient.hh \
                             WaveletEngine.hh      \
                             WaveletEvent.hh     
