@@ -4,6 +4,7 @@ lib_LTLIBRARIES = libNewWave.la
 
 libNewWave_la_SOURCES = FrequencyBand.cc      \
                         PixelDefinition.cc    \
+                        WaveletBaseEvent.cc   \
                         WaveletCoefficient.cc 
 
 libNewWave_la_CPPFLAGS  = $(AM_CPPFLAGS)
